--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -25,7 +25,7 @@
       <section>
         <h2>Nuestro Portafolio</h2>
         <section>
-          <img src="ruta-de-imagen1.jpg" alt="Proyecto 1" />
+          <img src="../imagenes/mp.jpg" alt="Proyecto 1" />
           <h2>Transporte de Carga Pesada</h2>
           <p>
             Ofrecemos soluciones especializadas para el transporte de carga
@@ -36,7 +36,7 @@
           </p>
         </section>
         <section>
-          <img src="ruta-de-imagen2.jpg" alt="Proyecto 2" />
+          <img src="../imagenes/DNM.jpg" alt="Proyecto 2" />
           <h2>Distribución Nacional de Mercancías</h2>
           <p>
             Nuestro servicio de distribución nacional está diseñado para
