--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
         <h1>QuickMove</h1>
       </div>
       <nav>
-        <ul class="header-right">
+        <ul class="header-right" id="menu">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="pages/portafolio.html">Portafolio</a></li>
           <li><a href="pages/services.html">Servicios</a></li>
           <li><a href="pages/contact.html">Contacto</a></li>
           <li><a href="#acerca">Acerca de</a></li>
         </ul>
+        <div class="menu-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </nav>
     </header>
 
@@ -135,9 +140,9 @@
       <section>
         <h2>Galería</h2>
         <div class="gallery">
-          <img src="images/galeria1.jpg" alt="Imagen 1" />
-          <img src="images/galeria2.jpg" alt="Imagen 2" />
-          <img src="images/galeria3.jpg" alt="Imagen 3" />
+          <img src="imagenes/G1.jpg" alt="Imagen 1" />
+          <img src="imagenes/G2.jpg" alt="Imagen 2" />
+          <img src="imagenes/G3.jpg" alt="Imagen 3" />
         </div>
       </section>
       <h2 id="acerca">Acerca De</h2>
