--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,13 +13,18 @@
         <h1>QuickMove</h1>
       </div>
       <nav>
-        <ul class="header-right">
+        <ul class="header-right" id="menu">
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="portafolio.html">Portafolio</a></li>
           <li><a href="services.html">Servicios</a></li>
           <li><a href="contact.html">Contacto</a></li>
-          <li><a href="#acerca">Acerca de</a></li>
+          <li><a href="../index.html#acerca">Acerca de</a></li>
         </ul>
+        <div class="menu-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </nav>
     </header>
 
@@ -70,6 +75,6 @@
         </p>
       </footer>
 
-    <script src="js/script.js"></script>
+    <script src="../JS/script.js"></script>
   </body>
 </html>
