--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
       </p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="JS/script.js"></script>
   </body>
 </html>
