--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
     <!-- Main Content -->
     <main>
+
+      <section>
+        <img src="imagenes/banner.jpg" class="gallery2" alt="">
+      </section>
       <!-- Nuestra Misión -->
       <section>
         <h2>Nuestra Misión</h2>
@@ -85,12 +89,12 @@
       <section>
         <h2>Conoce a Nuestro Equipo</h2>
         <div class="team-member">
-          <img src="images/equipo1.jpg" alt="Juan Pérez" />
+          <img src="imagenes/fotoh.jpg" alt="Juan Pérez" />
           <h3>Juan Pérez</h3>
           <p>Fundador y CEO</p>
         </div>
         <div class="team-member">
-          <img src="images/equipo2.jpg" alt="Maria García" />
+          <img src="imagenes/fotom.jpg" alt="Maria García" />
           <h3>Maria García</h3>
           <p>Directora de Marketing</p>
         </div>
@@ -105,7 +109,7 @@
             Estamos emocionados de anunciar el lanzamiento de nuestra nueva
             versión del producto...
           </p>
-          <a href="blog/nuevo-lanzamiento.html">Leer más</a>
+          <a href="#blog/nuevo-lanzamiento.html">Leer más</a>
         </article>
         <article>
           <h3>Evento de Networking</h3>
@@ -113,7 +117,7 @@
             El próximo mes participaremos en el evento de networking más grande
             de la industria...
           </p>
-          <a href="blog/evento-networking.html">Leer más</a>
+          <a href="#blog/evento-networking.html">Leer más</a>
         </article>
       </section>
 
